<resources>
    <string name="app_name">BusTracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_location">Edit Location</string>
    <string name="nav_school">About School</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_contact">Contact Us</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Profile</item>
        <item>Edit Location</item>
        <item>Settings</item>
        <item>About School</item>
        <item>Contact Us</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="activity_image_trans">activity_image_transition</string>
    <string name="activity_text_trans">activity_text_transition</string>
    <string name="activity_mixed_trans">activity_mixed_transition</string>
    <string name="fragment_image_trans">fragment_image_transition</string>
</resources>
