<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/nav_location" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/nav_school" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_local_phone_black_24dp"
            android:title="@string/nav_contact" />

    </group>

</menu>